--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,9 @@
+Tue Jul 23 08:04:20 2002  Tim Janik  <timj@gtk.org>
+
+	* Makefile.am: remove unused fldbsepattern.c from build list.
+
+	* *.c: adaptions to constant changes, use new pspec constructors.
+
 Mon Jul 15 06:26:18 2002  Tim Janik  <timj@gtk.org>
 
 	* bsesimpleadsr*.[hc]: support "done" output signal which goes high
