--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sat Jul 27 07:49:48 2002  Tim Janik  <timj@gtk.org>
+
+	* bststest.c: adapt to new GSL data handle API.
+
+	* bstwaveeditor.[hc]: major code cleanup, adapt to new GSL data handle API.
+
 Thu Jul 25 01:25:35 2002  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bststest.c: gsl_wave_handle_new() updates.
